--- a/COMP003B.Assignment6/Views/OSDivisions/Delete.cshtml
+++ b/COMP003B.Assignment6/Views/OSDivisions/Delete.cshtml
@@ -19,9 +19,9 @@
             @Html.DisplayFor(model => model.Title)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
-        <input type="hidden" asp-for="CourseId" />
+        <input type="hidden" asp-for="DivisionId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
