--- a/COMP003B.Assignment6/Views/OSDivisions/Details.cshtml
+++ b/COMP003B.Assignment6/Views/OSDivisions/Details.cshtml
@@ -20,6 +20,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CourseId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.DivisionId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
