--- a/COMP003B.Assignment6/Views/OSDivisions/Index.cshtml
+++ b/COMP003B.Assignment6/Views/OSDivisions/Index.cshtml
@@ -26,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CourseId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CourseId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CourseId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.DivisionId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.DivisionId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.DivisionId">Delete</a>
             </td>
         </tr>
 }
